[build-system]
requires = ["setuptools"]

[project]
name = "public-data-extractor-for-meetup-com"
description = "Public Data Extractor for meetup.com"
readme = "README.md"
version = "0.2.1"
requires-python = ">=3.10"
dependencies = [
    "requests", "PyJWT", "cryptography", "staticpipes>=0.6,<2", "jinja2"
]


[tool.setuptools.package-data]
"publicdataextractorformeetupcom.site" = ["*.css", "*.html"]

[project.optional-dependencies]
dev= ["pytest", "black", "isort", "flake8"]

[tool.isort]
profile = "black"
